--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-  overlay_image:"/images/treescovered.jpg"
+  <img src="/assets/images/treescovered.jpg" alt="">
 ---
