new index photo

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 layout: home
 author_profile: true
 header:
-  <img src="/assets/images/treescovered.jpg" alt="">
+  overlay_image: /images/graph.jpg
+  caption: "Photo credit: [**Armand Khoury**](https://unsplash.com/photos/4cBVro7SHLs)"
 ---
