--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 author_profile: true
 header:
-  overlay_image: /images/graph.jpg
-  caption: "Photo credit: [**Armand Khoury**](https://unsplash.com/photos/4cBVro7SHLs)"
+  overlay_image: /images/gardenofgods.jpg
+  caption: "Photo credit: [**Ian Baldwin**](https://unsplash.com/photos/UA1UN-r9E5Y)"
 ---
