added garden of gods photo for cover

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 author_profile: true
 header:
-  overlay_image: /images/gardenofgods2.jpg
+  image: /images/gardenofgods3.jpg
   caption: "Photo credit: [**Ian Baldwin**](https://unsplash.com/photos/UA1UN-r9E5Y)"
 ---
